--- a/finished_app/app.json
+++ b/finished_app/app.json
@@ -4,11 +4,7 @@
     "slug": "dead-simple-react-native",
     "privacy": "public",
     "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,11 +16,14 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
+      "bundleIdentifier": "com.closebrace.dspodcasts",
       "supportsTablet": true
-    }
+    },
+    "android": {
+      "package": "com.closebrace.dspodcasts"
+    },
+    "description": ""
   }
 }
